# youtube-creator

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  job_store.py  logging_setup.py  main.py  models.py
backend/app/pipeline/: __init__.py  graph.py  retry.py  state.py  utils.py
backend/app/pipeline/nodes/: __init__.py  assemble_node.py  asset_node.py  audio_node.py  complete_node.py  music_node.py  review_node.py  script_node.py
backend/app/system/: __init__.py  dependency_check.py
frontend/: package-lock.json  package.json  tsconfig.json  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: JobDetail.tsx  JobList.tsx  LibraryPanel.tsx
frontend/lib/: api.ts
scripts/: check_media_deps.py
